fix lifeline z-index

--- a/css/seq_diagram.less
+++ b/css/seq_diagram.less
@@ -81,7 +81,7 @@
 					position: relative;
 					top: 0;
 					left: 0;
-					z-index: -1;
+					z-index: 0;
 					width: 0;
 					border-left: 1px dashed @box_bordercolor;
 					flex: 0.5;
